pypi, reqs, template

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,6 @@
 {% set name  = "anyjson" %}
 {% set version = "0.3.3" %}
 {% set sha256 = "37812d863c9ad3e35c0734c42e0bf0320ce8c3bed82cd20ad54cb34d158157ba" %}
-{% set build = 2 %}
 
 package:
     name: {{ name|lower }}
@@ -9,18 +8,18 @@ package:
 
 source:
     fn: {{ name }}-{{ version }}.tar.gz
-    url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+    url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
     sha256: {{ sha256 }}
 
 build:
     noarch: python
-    number: {{ build }}
+    number: 2
     script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
-    build:
+    host:
         - python
-        - setuptools
+        - pip
     run:
         - python
 
