--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
 
 build:
     number: {{ build }}
-    script: "{{ PYTHON }} -m pip install . -vv"
+    script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
     build:
@@ -41,3 +41,4 @@ extra:
     recipe-maintainers:
         - kwilcox
         - pmlandwehr
+        - matthiasdiener
