--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,11 +15,13 @@ source:
 build:
     number: {{ build }}
     script: {{ PYTHON }} -m pip install . -vv
+    noarch: python
 
 requirements:
     build:
         - python
     host:
+        - python
         - setuptools
         - pip
     run:
