--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,9 +19,9 @@ build:
 
 requirements:
     build:
-        - python
+        - python >=3.6
     host:
-        - python
+        - python >=3.6
         - setuptools
         - pip
     run:
